# gpo

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
docs/: codebase_summary.md  methodology_answers.md  methodology_faq.md
engine/: allocator.py  config.py  market_data.py  recovery.py  regime.py
scripts/: generate_codebase_summary_pdf.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_engine.py
